[gd_scene load_steps=11 format=2]

[ext_resource path="res://load/em.png" type="Texture" id=1]
[ext_resource path="res://scenes/card.tscn" type="PackedScene" id=2]
[ext_resource path="res://load/Logo_Front_National.svg.png" type="Texture" id=3]
[ext_resource path="res://load/fi.png" type="Texture" id=4]
[ext_resource path="res://load/Subtract.png" type="Texture" id=5]
[ext_resource path="res://load/ir.png" type="Texture" id=6]
[ext_resource path="res://scenes/app.gd" type="Script" id=11]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.0129032 )
colors = PoolColorArray( 0.94902, 0.94902, 0.94902, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
shadow_color = Color( 0.615686, 0.615686, 0.615686, 0.0666667 )
shadow_size = 6
shadow_offset = Vector2( 0, 6 )

[node name="App" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
texture = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 41.0
margin_right = -25.0
margin_bottom = -258.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card" parent="CardContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1030.0
margin_bottom = 1621.0
rect_pivot_offset = Vector2( 515, 740 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BottomMenu" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -232.0
mouse_filter = 1
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="BottomMenu"]
margin_right = 1080.0
margin_bottom = 207.0

[node name="MarginContainer2" type="MarginContainer" parent="BottomMenu/HBoxContainer"]
margin_right = 267.0
margin_bottom = 207.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Button" type="Button" parent="BottomMenu/HBoxContainer/MarginContainer2"]
margin_left = 20.0
margin_top = 20.0
margin_right = 247.0
margin_bottom = 187.0
custom_styles/normal = SubResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="BottomMenu/HBoxContainer/MarginContainer2"]
margin_left = 20.0
margin_top = 20.0
margin_right = 247.0
margin_bottom = 187.0
custom_constants/margin_right = 35
custom_constants/margin_top = 35
custom_constants/margin_left = 35
custom_constants/margin_bottom = 35

[node name="TextureButton" type="TextureButton" parent="BottomMenu/HBoxContainer/MarginContainer2/MarginContainer"]
margin_left = 35.0
margin_top = 35.0
margin_right = 192.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="melenchon" type="TextureProgress" parent="BottomMenu/HBoxContainer/MarginContainer2"]
margin_left = 20.0
margin_top = 20.0
margin_right = 247.0
margin_bottom = 187.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
fill_mode = 4
tint_progress = Color( 0.498039, 1, 0, 1 )
nine_patch_stretch = true

[node name="MarginContainer3" type="MarginContainer" parent="BottomMenu/HBoxContainer"]
margin_left = 271.0
margin_right = 538.0
margin_bottom = 207.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Button" type="Button" parent="BottomMenu/HBoxContainer/MarginContainer3"]
margin_left = 20.0
margin_top = 20.0
margin_right = 247.0
margin_bottom = 187.0
custom_styles/normal = SubResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="BottomMenu/HBoxContainer/MarginContainer3"]
margin_left = 20.0
margin_top = 20.0
margin_right = 247.0
margin_bottom = 187.0
custom_constants/margin_right = 35
custom_constants/margin_top = 35
custom_constants/margin_left = 35
custom_constants/margin_bottom = 35

[node name="TextureButton" type="TextureButton" parent="BottomMenu/HBoxContainer/MarginContainer3/MarginContainer"]
margin_left = 35.0
margin_top = 35.0
margin_right = 192.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="macron" type="TextureProgress" parent="BottomMenu/HBoxContainer/MarginContainer3"]
margin_left = 20.0
margin_top = 20.0
margin_right = 247.0
margin_bottom = 187.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
fill_mode = 4
tint_progress = Color( 0.498039, 1, 0, 1 )
nine_patch_stretch = true

[node name="MarginContainer4" type="MarginContainer" parent="BottomMenu/HBoxContainer"]
margin_left = 542.0
margin_right = 809.0
margin_bottom = 207.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Button" type="Button" parent="BottomMenu/HBoxContainer/MarginContainer4"]
margin_left = 20.0
margin_top = 20.0
margin_right = 247.0
margin_bottom = 187.0
custom_styles/normal = SubResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="BottomMenu/HBoxContainer/MarginContainer4"]
margin_left = 20.0
margin_top = 20.0
margin_right = 247.0
margin_bottom = 187.0
custom_constants/margin_right = 35
custom_constants/margin_top = 35
custom_constants/margin_left = 35
custom_constants/margin_bottom = 35

[node name="TextureButton" type="TextureButton" parent="BottomMenu/HBoxContainer/MarginContainer4/MarginContainer"]
margin_left = 35.0
margin_top = 35.0
margin_right = 192.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="sarko" type="TextureProgress" parent="BottomMenu/HBoxContainer/MarginContainer4"]
margin_left = 20.0
margin_top = 20.0
margin_right = 247.0
margin_bottom = 187.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
fill_mode = 4
tint_progress = Color( 0.498039, 1, 0, 1 )
nine_patch_stretch = true

[node name="MarginContainer5" type="MarginContainer" parent="BottomMenu/HBoxContainer"]
margin_left = 813.0
margin_right = 1080.0
margin_bottom = 207.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Button" type="Button" parent="BottomMenu/HBoxContainer/MarginContainer5"]
margin_left = 20.0
margin_top = 20.0
margin_right = 247.0
margin_bottom = 187.0
custom_styles/normal = SubResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="BottomMenu/HBoxContainer/MarginContainer5"]
margin_left = 20.0
margin_top = 20.0
margin_right = 247.0
margin_bottom = 187.0
custom_constants/margin_right = 35
custom_constants/margin_top = 35
custom_constants/margin_left = 35
custom_constants/margin_bottom = 35

[node name="TextureButton" type="TextureButton" parent="BottomMenu/HBoxContainer/MarginContainer5/MarginContainer"]
margin_left = 35.0
margin_top = 35.0
margin_right = 192.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="lepen" type="TextureProgress" parent="BottomMenu/HBoxContainer/MarginContainer5"]
margin_left = 20.0
margin_top = 20.0
margin_right = 247.0
margin_bottom = 187.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
fill_mode = 4
tint_progress = Color( 0.498039, 1, 0, 1 )
nine_patch_stretch = true

[node name="MatchContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = -66.0
margin_right = 6.0
margin_bottom = -66.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="finished" from="CardContainer/Card" to="." method="_on_Card_finished"]
[connection signal="moving" from="CardContainer/Card" to="." method="_on_Card_moving"]
